# mali-g615-driver

./: BUILD_AND_INTEGRATE.md  HOW_TO_GET_YOUR_SO_FILE.md
.github/workflows/: build.yml
android/: BUILD_FOR_EDEN.md  BUILD_WINDOWS.md  CMakeLists.txt  mali_kbase_device.h  mali_kbase_iface.h  meta.json  pan_kmod_mali_kbase.h  vulkan_g615.map
emulation/: mali_g615_emu_config.c  mali_g615_emu_config.h
kernel/: Makefile.patch  panthor_g615.c  panthor_g615.h  panthor_g615_mmu.c
patches/: 0001-panfrost-add-mali-kbase-backend.patch  0002-panfrost-add-g615-gpu-support.patch  0003-panvk-android-packaging.patch
